--- a/ModernStore.Api/appsettings.json
+++ b/ModernStore.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnections": "Server=RMATEIA-SILVA, 1433;Database=ModernStore;User Id=sa;Password=1q2w3e4r@#$; Trusted_Connection=False; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
